# pattern-language-parser-generator

./: .gitignore  README.md  application-design.md  application-guide.md  command-reference.md  docker-compose.yml  instructions_for_docker.md  mkdocs.yml  pyproject.toml  requirements.txt  setup_resources.py  workflow.md
docs/: 404.html  application-design.md  application-guide.md  command-reference.md  config.yml  configuration-file-reference.md  index.html  index.md  instructions_for_docker.md  set-up-and-installation.md  sitemap.xml  srs.md  troubleshooting.md  workflow.md
docs/application-design/: index.html
docs/application-guide/: index.html
docs/changelog/: index.html
docs/command-reference/: index.html
docs/configuration-file-reference/: index.html
docs/design/: architecture.md  design-patterns.md
docs/design/architecture/: index.html
docs/design/design-patterns/: index.html
docs/instructions_for_docker/: index.html
docs/reference/: cli.md  configuration.md
docs/reference/cli/: index.html
docs/reference/configuration/: index.html
docs/reference/docker/: index.html
docs/roadmap/: index.html
docs/search/: search_index.json
docs/set-up-and-installation/: index.html
docs/srs/: index.html
docs/troubleshooting/: index.html
docs/user-guide/: commands.md  configuration.md  getting-started.md  installation.md  quick-start.md  troubleshooting.md
docs/user-guide/commands/: index.html
docs/user-guide/configuration/: index.html
docs/user-guide/getting-started/: index.html
docs/user-guide/installation/: index.html
docs/user-guide/quick-start/: index.html
docs/user-guide/troubleshooting/: index.html
docs/user-guide/workflows/: index.html
docs/workflow/: index.html
site/: application-design.md  changelog.md  config.yml  roadmap.md  set-up-and-installation.md  troubleshooting.md
site/design/: design-patterns.md
site/reference/: docker.md
site/user-guide/: workflows.md
src/pattern_language_miner/: __init__.py  cli.py  walker.py
src/pattern_language_miner/cluster/: __init__.py  pattern_cluster.py
src/pattern_language_miner/enricher/: __init__.py  pattern_enricher.py
src/pattern_language_miner/extractor/: __init__.py  pattern_extractor.py  semantic_cluster.py
src/pattern_language_miner/generator/: __init__.py  generate_sentences.py
src/pattern_language_miner/graph/: __init__.py  graph_export.py
src/pattern_language_miner/output/: __init__.py  assembly_generator.py  yaml_writer.py
src/pattern_language_miner/parser/: __init__.py  base_parser.py  html_parser.py  markdown_parser.py  text_parser.py
src/pattern_language_miner/patterns/: pattern.py
src/pattern_language_miner/pipeline/: __init__.py  events.py  pipeline.py
src/pattern_language_miner/schema/: config_schema.json  pattern-schema.json  pattern_schema_extended.json
src/pattern_language_miner/transform/: __init__.py  generate_sentences.py
src/pattern_language_miner/utils/: config_validation.py  logging.py  progress.py
src/pattern_language_miner/vector_store/: __init__.py  weaviate_store.py
src/pattern_language_miner/writer/: __init__.py  yaml_writer.py
tests/: conftest.py  integration_test.py  test_cluster.py  test_enrich_patterns.py  test_extractor.py  test_generate_sentences.py  test_graph_export.py  test_parser.py  test_pipeline.py  test_walker.py  test_yaml_writer.py
tests/data/: config_valid.yaml
